--- a/yourname.css
+++ b/yourname.css
@@ -1,23 +1,42 @@
-
-
+html,
 body {
-background: white;
-color: black;
-font-family: Arial, sans-serif;
-
-height: 100vh;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+  color: black;
+  font-family: Arial, sans-serif;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 
 }
 
 button {
-padding: 8px 12px;
-border-radius: 6px;
+  padding: 8px 12px;
+  border-radius: 6px;
+  position: relative;
+  z-index: 1;
 }
 
 button:hover {
   background: #ddd;
+}
+
+div[data-us-project="tIUIR6U9Br0xoLP3ed1d"] {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+}
+
+h1 {
+  color: aqua;
+  position: relative;
+  z-index: 1;
 }
